[tool.poetry]
name = "teatung"
version = "0.1.0"
description = "This a Tea project package"
authors = ["falltung <falltung@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
canopen = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
